fix: resolve layout issue on mobile devices

--- a/variacoes/barbecue/src/styles/styles.css
+++ b/variacoes/barbecue/src/styles/styles.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
+! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -554,6 +554,10 @@ video {
   top: -3rem;
 }
 
+.-top-40 {
+  top: -10rem;
+}
+
 .-top-\[1rem\] {
   top: -1rem;
 }
@@ -588,26 +592,6 @@ video {
 
 .top-24 {
   top: 6rem;
-}
-
-.-top-20 {
-  top: -5rem;
-}
-
-.-top-28 {
-  top: -7rem;
-}
-
-.-top-36 {
-  top: -9rem;
-}
-
-.-top-44 {
-  top: -11rem;
-}
-
-.-top-40 {
-  top: -10rem;
 }
 
 .z-10 {
@@ -651,6 +635,11 @@ video {
   margin-bottom: 3.5rem;
 }
 
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .-mt-32 {
   margin-top: -8rem;
 }
@@ -661,10 +650,6 @@ video {
 
 .-mt-5 {
   margin-top: -1.25rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
 }
 
 .mb-2 {
@@ -685,6 +670,14 @@ video {
 
 .mb-\[-10\%\] {
   margin-bottom: -10%;
+}
+
+.ml-16 {
+  margin-left: 4rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
 }
 
 .ml-20 {
@@ -795,6 +788,14 @@ video {
   display: none;
 }
 
+.aspect-\[16\/12\] {
+  aspect-ratio: 16/12;
+}
+
+.aspect-video {
+  aspect-ratio: 16 / 9;
+}
+
 .h-0 {
   height: 0px;
 }
@@ -840,6 +841,10 @@ video {
   height: max-content;
 }
 
+.max-h-\[20rem\] {
+  max-height: 20rem;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -860,8 +865,8 @@ video {
   width: 3.5rem;
 }
 
-.w-2\/3 {
-  width: 66.666667%;
+.w-4\/5 {
+  width: 80%;
 }
 
 .w-7 {
@@ -921,26 +926,6 @@ video {
   width: max-content;
 }
 
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-\[40\%\] {
-  width: 40%;
-}
-
-.w-\[30\%\] {
-  width: 30%;
-}
-
-.max-w-\[50\%\] {
-  max-width: 50%;
-}
-
 .max-w-\[80\%\] {
   max-width: 80%;
 }
@@ -955,6 +940,22 @@ video {
 
 .max-w-vtex {
   max-width: 74rem;
+}
+
+.max-w-\[90\%\] {
+  max-width: 90%;
+}
+
+.max-w-xs {
+  max-width: 20rem;
+}
+
+.max-w-\[28rem\] {
+  max-width: 28rem;
+}
+
+.max-w-\[38rem\] {
+  max-width: 38rem;
 }
 
 .flex-shrink-0 {
@@ -1069,6 +1070,10 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
+.self-end {
+  align-self: flex-end;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1116,15 +1121,6 @@ video {
   border-width: 1px;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
-.border-red-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(252 165 165 / var(--tw-border-opacity));
-}
-
 .bg-black-default {
   --tw-bg-opacity: 1;
   background-color: rgb(29 29 27 / var(--tw-bg-opacity));
@@ -1154,11 +1150,6 @@ video {
 
 .bg-no-repeat {
   background-repeat: no-repeat;
-}
-
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 
 .object-cover {
@@ -1247,8 +1238,16 @@ video {
   padding-bottom: 1rem;
 }
 
+.pl-8 {
+  padding-left: 2rem;
+}
+
 .pt-20 {
   padding-top: 5rem;
+}
+
+.pl-16 {
+  padding-left: 4rem;
 }
 
 .text-center {
@@ -1359,6 +1358,11 @@ video {
   letter-spacing: -0.05em;
 }
 
+.text-black-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-black-default {
   --tw-text-opacity: 1;
   color: rgb(29 29 27 / var(--tw-text-opacity));
@@ -1398,11 +1402,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:mx-20 {
-    margin-left: 5rem;
-    margin-right: 5rem;
-  }
-
   .sm\:mt-0 {
     margin-top: 0px;
   }
@@ -1483,28 +1482,12 @@ video {
     margin-left: -2.5rem;
   }
 
-  .md\:-ml-44 {
-    margin-left: -11rem;
-  }
-
-  .md\:-mt-24 {
-    margin-top: -6rem;
-  }
-
-  .md\:mb-16 {
-    margin-bottom: 4rem;
-  }
-
   .md\:ml-0 {
     margin-left: 0px;
   }
 
   .md\:ml-20 {
     margin-left: 5rem;
-  }
-
-  .md\:ml-4 {
-    margin-left: 1rem;
   }
 
   .md\:ml-6 {
@@ -1551,20 +1534,8 @@ video {
     margin-top: 9rem;
   }
 
-  .md\:mt-40 {
-    margin-top: 10rem;
-  }
-
-  .md\:mt-48 {
-    margin-top: 12rem;
-  }
-
   .md\:mt-5 {
     margin-top: 1.25rem;
-  }
-
-  .md\:mt-48 {
-    margin-top: 12rem;
   }
 
   .md\:block {
@@ -1647,10 +1618,6 @@ video {
     width: 100%;
   }
 
-  .md\:min-w-\[50\%\] {
-    min-width: 50%;
-  }
-
   .md\:-translate-y-\[6rem\] {
     --tw-translate-y: -6rem;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1710,11 +1677,6 @@ video {
     background-color: rgb(29 29 27 / var(--tw-bg-opacity));
   }
 
-  .md\:bg-red-default {
-    --tw-bg-opacity: 1;
-    background-color: rgb(152 31 31 / var(--tw-bg-opacity));
-  }
-
   .md\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -1723,10 +1685,6 @@ video {
   .md\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
-  }
-
-  .md\:pb-16 {
-    padding-bottom: 4rem;
   }
 
   .md\:pl-5 {
@@ -1739,10 +1697,6 @@ video {
 
   .md\:pr-\[0rem\] {
     padding-right: 0rem;
-  }
-
-  .md\:pt-4 {
-    padding-top: 1rem;
   }
 
   .md\:text-center {
@@ -1813,6 +1767,14 @@ video {
     margin-right: 0px;
   }
 
+  .lg\:-ml-44 {
+    margin-left: -11rem;
+  }
+
+  .lg\:-mt-6 {
+    margin-top: -1.5rem;
+  }
+
   .lg\:-mt-8 {
     margin-top: -2rem;
   }
@@ -1821,8 +1783,16 @@ video {
     margin-bottom: 0px;
   }
 
+  .lg\:mb-16 {
+    margin-bottom: 4rem;
+  }
+
   .lg\:ml-20 {
     margin-left: 5rem;
+  }
+
+  .lg\:ml-4 {
+    margin-left: 1rem;
   }
 
   .lg\:mt-0 {
@@ -1837,12 +1807,24 @@ video {
     margin-top: 12rem;
   }
 
+  .lg\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
   .lg\:block {
     display: block;
   }
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
+
+  .lg\:w-\[25rem\] {
+    width: 25rem;
   }
 
   .lg\:w-\[75\%\] {
@@ -1857,12 +1839,36 @@ video {
     width: 100%;
   }
 
+  .lg\:min-w-\[50\%\] {
+    min-width: 50%;
+  }
+
+  .lg\:max-w-\[90\%\] {
+    max-width: 90%;
+  }
+
+  .lg\:max-w-xs {
+    max-width: 20rem;
+  }
+
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
+  }
+
   .lg\:items-start {
     align-items: flex-start;
+  }
+
+  .lg\:items-center {
+    align-items: center;
   }
 
   .lg\:rounded-3xl {
@@ -1879,13 +1885,32 @@ video {
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 
+  .lg\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
   .lg\:py-14 {
     padding-top: 3.5rem;
     padding-bottom: 3.5rem;
   }
 
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .lg\:pb-10 {
     padding-bottom: 2.5rem;
+  }
+
+  .lg\:pb-16 {
+    padding-bottom: 4rem;
   }
 
   .lg\:pb-20 {
@@ -1896,8 +1921,26 @@ video {
     padding-right: 5rem;
   }
 
+  .lg\:pt-4 {
+    padding-top: 1rem;
+  }
+
+  .lg\:text-center {
+    text-align: center;
+  }
+
   .lg\:text-start {
     text-align: start;
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .lg\:text-\[1\.25rem\] {
